--- a/assets/base.css
+++ b/assets/base.css
@@ -3124,9 +3124,7 @@ details-disclosure > details {
 }
 
 .animate--fixed > img:not(.zoom):not(.deferred-media__poster-button),
-.animate--fixed > svg:not(.zoom):not(.deferred-media__poster-button),
-.animate--zoom-in > img:not(.zoom):not(.deferred-media__poster-button),
-.animate--zoom-in > svg:not(.zoom):not(.deferred-media__poster-button) {
+.animate--fixed > svg:not(.zoom):not(.deferred-media__poster-button) {
   position: fixed;
   height: 100vh;
 }
